# QuDrip

./: CMakeLists.txt  LICENSE  README.md
examples/: spin.cpp
include/: conservation.hpp  find_param.hpp  index.hpp  lattice.hpp  matrix.hpp  mc_manager.hpp  operator.hpp  operator_abel.hpp  qudrip.hpp  sparse_algorithm.hpp  state.hpp  utils.hpp
include/operators/: bit.hpp  hopbit.hpp  mode.hpp
lib/: conservation.hpp  find_param.hpp  index.hpp  matrix.hpp  mc_manager.hpp  operator.hpp  operator_abel.hpp  qudrip.hpp  sparse_algorithm.hpp  state.hpp  utils.hpp
lib/operators/: bit.hpp  hopbit.hpp  mode.hpp
programs/: hubbard_diss.cpp  spin.cpp  two_liquid_sq.cpp
